Fri Aug 31 17:33:34 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMM.java: Remove xdelta member, it is
	obsolete.  Make Node.file transient and add a new pathComponents
	member to store component paths.  Serialized OEMM instances should
	now be portable, but serialVersionUID have been modified.

Fri Aug 31 12:52:40 CEST 2007 Jan Kozusznik <jan.kozusznik@vsb.cz>

	* src/org/jcae/mesh/oemm/OEMM.java: New OEMM.Node.getMaxIndex() and
	OEMM.getDepth() methods.
	* src/org/jcae/mesh/oemm/Storage.java: Implement saveNodes() to store
	modified octants back onto disk.  Add an optional argument to
	loadNodes() to build non-readable triangles.  It is now possible to
	read/modify/store meshes onto disk.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Fix OuterVertex constructor.
	Implement vertex list, this is needed to save OEMM instances.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Replace
	f.isOuter() test on triangles by isSkippedTriangle() to also detect
	non-writable triangles.
	* src/org/jcae/mesh/MeshOEMMDecimate.java
	  src/org/jcae/mesh/MeshOEMMViewer3d.java: Minor changes.
	* src/org/jcae/mesh/MeshOEMMCountElements.java
	  src/org/jcae/mesh/MeshOEMMCoarseViewer.java
	  src/org/jcae/mesh/MeshOEMMDecimateMoreLeaves.java: New main classes.

Fri Aug 31 15:21:26 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/QSortedTree.java: New getRootValue()
	method.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Fix
	penalty when edge cannot be processed, QSortedTree.getRootValue()
	gives a better value.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Fix cost()
	computation by using definitive location of vertex.

Sun Aug 26 01:46:56 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMPopulate.java: Run
	RawStorage.countTriangles() to count triangles from new triangle soup.